fixing spacing on about/future pages and removing loading spinner on all pages but main

--- a/_sass/_loading.scss
+++ b/_sass/_loading.scss
@@ -5,8 +5,8 @@
 .loader {
 	width: 100vw;
 	height: 100vh;
-	background-color: $black;
-	color: $white; 
+	background-color: $white;
+	color: $black; 
 	display: flex;
 	align-items: center;
 	justify-content: center;
